Fix text on mobile take 2

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7212,13 +7212,12 @@ i {
 :root {
     --font-primary: Roboto, sans-serif;
     --font-secondary: Playfair Display, serif;
-    --text-base-size: 1em;
+    --text-base-size: 1.5rem;
     --text-scale-ratio: 1.2;
     --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
     --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
     --text-md: calc(
-        var(--text-sm) * var(--text-scale-ratio) * var(--text-scale-ratio)
-    );
+        var(--text-sm) * var(--text-scale-ratio));
     --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
     --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
     --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
@@ -7230,13 +7229,62 @@ i {
 }
 
 @supports (--css: variables) {
-    @media (min-width: 64rem) {
+    
+    @media (min-width: 992px) {
         :root {
             --text-base-size: 1.25em;
-            --text-scale-ratio: 1.25;
+            --text-scale-ratio: 1.2;
+            --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
+            --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
+            --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
+            --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
+            --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
+            --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
+            --text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
+            --body-line-height: 1.4;
+            --heading-line-height: 1.2;
+            --font-primary-capital-letter: 0.75;
+            --font-secondary-capital-letter: 0.75;
+        }
+    }
+    
+    @media (min-width: 600px) {
+        :root {
+            --text-base-size: 1.15em;
+            --text-scale-ratio: 1.2;
+            --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
+            --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
+            --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
+            --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
+            --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
+            --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
+            --text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
+            --body-line-height: 1.4;
+            --heading-line-height: 1.2;
+            --font-primary-capital-letter: 0.75;
+            --font-secondary-capital-letter: 0.75;
+        }
+    }
+    
+    @media (max-width: 600px) {
+        :root {
+            --text-base-size: 0.7em;
+            --text-scale-ratio: 1.2;
+            --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
+            --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
+            --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
+            --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
+            --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
+            --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
+            --text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
+            --body-line-height: 1.4;
+            --heading-line-height: 1.2;
+            --font-primary-capital-letter: 0.75;
+            --font-secondary-capital-letter: 0.75;
         }
     }
 }
+
 
 body {
     font-family: var(--font-primary);
